# infrastructure-toolkit

./: .gitignore  .lifecycle-state.yaml  README.md  docker-compose.dev.yml  docker-compose.yml
.forgejo/workflows/: build-test.yml
.github/workflows/: auto-promote.yml  build-test.yml
.lifecycle/: roadmap.md  state.yaml
ai-config/session-logs/: session_ids.json
core/backend/: Dockerfile  infra_toolkit.db  pyproject.toml  pytest.ini
core/backend/ai-config/session-logs/: session_ids.json
core/backend/infra_toolkit/: __init__.py  auth.py  base_tool.py  cache.py  cli.py  database.py  email.py  json_log.py  mcp_server.py
core/backend/infra_toolkit/api/: __init__.py  main.py
core/backend/infra_toolkit/api/routers/: auth.py  cloudflare.py  docker.py  nas.py  network.py  performance.py  proxmox.py  pterodactyl.py  websocket.py
core/backend/infra_toolkit/safety/: __init__.py  backup.py  verification.py
core/backend/infra_toolkit/templates/email/: password_reset.html  password_reset.txt  test_email.html  test_email.txt
core/backend/infra_toolkit/tools/: __init__.py  cloudflare.py  docker.py  homeassistant.py  nas.py  network.py  performance.py  protonmail.py  proxmox.py  pterodactyl.py  ups.py  uptime_kuma.py
core/backend/infra_toolkit/utils/: ssh.py
core/backend/tests/: conftest.py
core/backend/tests/api/: test_performance_api.py
core/backend/tests/unit/: test_cloudflare_tool.py  test_docker_tool.py  test_metrics_integration.py  test_network_tool.py  test_performance_tool.py
core/frontend/: Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
core/frontend/ai-config/session-logs/: session_ids.json
core/frontend/src/: App.tsx  index.css
core/frontend/src/components/: AlertSystem.tsx  LogViewer.tsx  MetricsChart.tsx  ResponsiveTabs.tsx  ServerCard.tsx  StatusBadge.tsx
core/frontend/src/contexts/: AuthContext.tsx
core/frontend/src/hooks/: useDocker.ts  useNetwork.ts  usePerformance.ts  useWebSocket.ts
core/frontend/src/pages/: Cloudflare.tsx  Dashboard.tsx  Docker.tsx  EmailSettings.tsx  ForgotPassword.tsx  Login.tsx  Logs.tsx  NAS.tsx  Network.tsx  Proxmox.tsx  Pterodactyl.tsx  ResetPassword.tsx  Servers.tsx  Settings.tsx
core/frontend/src/services/: api.ts
core/frontend/src/types/: api.ts
core/specs/: api.yaml
docs/: ARCHITECTURE.md
scripts/: usb-monitor.sh
